<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/text_to_be_updated"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/textInputLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:background="@color/white"
            android:textColor="@color/purple_500"
            android:maxLines="1"
            android:maxLength="15"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/textInputLayoutCNPJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cnpj"
            android:background="@color/white"
            android:textColor="@color/purple_500"
            android:maxLines="1"
            android:maxLength="18"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/textInputLayoutCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="14"
            android:maxLines="1"
            android:background="@color/white"
            android:textColor="@color/purple_500"
            android:inputType="number"
            android:hint="@string/cpf" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/textInputLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date"
            android:maxLines="1"
            android:background="@color/white"
            android:textColor="@color/purple_500"
            android:inputType="date"
            android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/textInputLayoutPlate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/plate"
            android:maxLines="1"
            android:background="@color/white"
            android:inputType="textCapCharacters"
            android:textColor="@color/purple_500"
            android:textAllCaps="true"
            android:maxLength="8"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.appcompat.widget.LinearLayoutCompat>